# mstream-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/mstream_mcp_server/: __init__.py  __main__.py  config.py  http_main.py  http_server.py  server.py  stdio_server.py
src/mstream_mcp_server/api/: __init__.py  client.py  models.py
src/mstream_mcp_server/transports/: __init__.py  http.py  stdio.py
tests/: conftest.py  test_api_client.py  test_models_contracts.py  test_server_tools.py
