[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mstream-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for streaming media operations."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "mstream maintainers" }]
keywords = ["mcp", "server", "streaming"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "mcp",
  "httpx>=0.27",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.5.0",
  "black>=24.4",
  "mypy>=1.10",
  "types-toml>=0.10.8",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
